defconfig: Enable Boeffla Wakelock Blocker

--- a/arch/arm64/configs/exynos8895-greatlte_defconfig
+++ b/arch/arm64/configs/exynos8895-greatlte_defconfig
@@ -41,7 +41,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION=" Memedo⚡"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -5487,3 +5487,5 @@ CONFIG_ARCH_HAS_ATOMIC64_DEC_IF_POSITIVE=y
 CONFIG_LIBFDT=y
 # CONFIG_SG_SPLIT is not set
 CONFIG_ARCH_HAS_SG_CHAIN=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
+
