--- a/arch/arm64/configs/exynos8895-dream2lte_defconfig
+++ b/arch/arm64/configs/exynos8895-dream2lte_defconfig
@@ -5485,3 +5485,4 @@ CONFIG_ARCH_HAS_ATOMIC64_DEC_IF_POSITIVE=y
 CONFIG_LIBFDT=y
 # CONFIG_SG_SPLIT is not set
 CONFIG_ARCH_HAS_SG_CHAIN=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
