Exynos8895: Rebrand the Kernel

--- a/arch/arm64/configs/exynos8895-dream2lte_defconfig
+++ b/arch/arm64/configs/exynos8895-dream2lte_defconfig
@@ -41,7 +41,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION=" Memedo⚡"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -124,10 +124,12 @@ CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_PAGE_COUNTER=y
-CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
-CONFIG_MEMCG_SWAP_ENABLED=y
-CONFIG_MEMCG_FORCE_USE_VM_SWAPPINESS=y
+CONFIG_MEMCG is not set
+CONFIG_MEMCG_SWAP is not set
+CONFIG_MEMCG_SWAP_ENABLED is not set
+CONFIG_MEMCG_FORCE_USE_VM_SWAPPINESS is not set
+CONFIG_DISABLE_TRACE_PRINTK=y
+CONFIG_ANDROID_SIMPLE_LMK=y
 # CONFIG_MEMCG_KMEM is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
